syntax = "proto3";

package com.shopping.stubs.product;

option java_multiple_files=true;
option java_package="com.shopping.stubs.product";

service ProductService{
  rpc getProductDetails(ProductRequest) returns (ProductResponse);
}

message ProductRequest{
  int32 id = 1;
}

message ProductResponse{
  int32 id = 1;
  string product_name = 2;
  double price = 3;
  int32 stock = 4;
}